tests/error/never_filled_in_extern_variable_in_block_scope_should_avoid_undeclared_identifiers.c
// reject "Undeclared identifier."
// fail "'extern' variable was never defined."

int main(){
    extern int undefined;
    undefined = 1;
}
